# aisp-genai-buildingblocks

./: .gitignore  README.md
Requirements-Refinement-using-EARS/: AGENTS.md  R1-login-requirements.aisp  README.md  ears.aisp  req-semiformal.md  req.md
SOLID/: AGENTS.md  README.md  paper-scissors-stone.aisp
The-Bootloader/: README.md  bootloader10.aisp  bootloader20.aisp
The-Firewall/: README.md  aisp51+firewall.aisp
aisp-mcp-bridge/: README.md  main.py  pyproject.toml  test_server.py  weather-request-minimal.aisp  weather-request-pocket.aisp  weather-service.aisp
aisp-mcp-bridge/src/: __init__.py  weather_server.py
aisp-mcp-bridge/tests/: __init__.py
beam-search-tuning/: README.md  run-ears.aisp  run-tunable-ears.aisp
binding-example/: README.md  refund2.aisp  tracing.aisp
chat-classification/: README.md  customerservice-classification.aisp
output-example/: README.md  output1.aisp  output2.aisp  output3.aisp
spec-mode/: README.md  spec.aisp
spec-mode/examples/: address.aisp  mfa-risk-policy.aisp
